--- a/kosakata.html
+++ b/kosakata.html
@@ -92,7 +92,12 @@
       ["juugo", "lima belas"],["juuroku", "enam belas"],["juunana", "tujuh belas"],["juuhachi", "delapan belas"],["juukyuu", "sembilan belas"],
       ["nijuu", "dua puluh"],["nijuuichi", "dua puluh satu"],["nijuuni", "dua puluh dua"],["nijuusan", "dua puluh tiga"],["hyaku", "seratus"],
       ["nihyaku", "dua ratus"],["sanbyaku", "tiga ratus"],["yohyaku", "empat ratus"],["gohyaku", "lima ratus"],["roppyaku", "enam ratus"],
-      ["nanahyaku", "tujuh ratus"],["happyaku", "delapan ratus"],["kyuuhyaku", "sembilan ratus"],["sen", "seribu"]
+      ["nanahyaku", "tujuh ratus"],["happyaku", "delapan ratus"],["kyuuhyaku", "sembilan ratus"],["sen", "seribu"],["nisen", "dua ribu"],
+      ["sanzen", "tiga ribu"],["yonsen", "empat ribu"],["gosen", "lima ribu"],["rokusen", "enam ribu"],["nanasen", "tujuh ribu"],
+      ["hassen", "delapan ribu"],["kyuusen", "sembilan ribu"],["man", "sepuluh ribu"],["niman", "dua puluh ribu"],["sanman", "tiga puluh ribu"],
+      ["yonman", "empat puluh ribu"],["goman", "lima puluh ribu"],["rokuman", "enam puluh ribu"],["nanaman", "tujuh puluh ribu"],
+      ["hachiman", "delapan puluh ribu"],["sichiman", "tujuh puluh ribu"],["juuman", "seratus ribu"],["hyakuman", "sejuta"],["senman", "sepuluh juta"],
+      ["oku", "seratus juta"],["chou", "satu triliun"]
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
