--- a/kotoba.html
+++ b/kotoba.html
@@ -164,7 +164,20 @@
       ["どうぞ", "silahkan"],
       ["どうも", "terimakasih"],
       ["(どうも)ありがとう(ございます)", "terimakasih banyak"],
-      ["ごれからおせわになります", "silahkan"]
+      ["ごれからおせわになります", "mulai sekarang akan minta bantuanmu"],
+      ["こちらこそよろしく", "sama-sama dengan senang hati"],
+      ["ここ", "di sini"],
+      ["そこ", "di situ"],
+      ["あそこ", "di sana"],
+      ["どこ", "dimana"],
+      ["こちら", "sini(sopan)"],
+      ["そちら", "situ(sopan)"],
+      ["あちら", "sana(sopan)"],
+      ["どちら", "mana(sopan)"],
+      ["きょうしつ", "ruang kelas"],
+      ["しょくどう", "ruang makan"],
+      ["じむしょ", "kantor"],
+      ["かいぎしつ", "ruang rapat"]
     ];
 
     let questions = [];
