--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -126,7 +126,24 @@
       ["あぶない", "berbahaya"],
       ["あまい", "manis"],
       ["あまり", "tidak terlalu"],
-      ["あめ", "hujan"]
+      ["あめ", "hujan"],
+      ["あめ", "permen"],
+      ["あらう", "mencuci"],
+      ["ある", "ada(benda mati)"],
+      ["あるく", "berjalan"],
+      ["あれ", "itu"],
+      ["いい", "iya"],
+      ["よい", "iya"],
+      ["いいえ", "tidak"],
+      ["いう", "mengatakan"],
+      ["いえ", "rumah"],
+      ["いかが", "bagaimana"],
+      ["いく", "pergi"],
+      ["いくつ", "berapa umur"],
+      ["いくら", "berapa banyak"],
+      ["いけ", "kolam"],
+      ["いしゃ", "dokter"],
+      ["いす", "kursi"]
     ];
 
     let questions = [];
