--- a/kosakata.html
+++ b/kosakata.html
@@ -97,7 +97,8 @@
       ["hassen", "delapan ribu"],["kyuusen", "sembilan ribu"],["man", "sepuluh ribu"],["niman", "dua puluh ribu"],["sanman", "tiga puluh ribu"],
       ["yonman", "empat puluh ribu"],["goman", "lima puluh ribu"],["rokuman", "enam puluh ribu"],["nanaman", "tujuh puluh ribu"],
       ["hachiman", "delapan puluh ribu"],["sichiman", "tujuh puluh ribu"],["juuman", "seratus ribu"],["hyakuman", "sejuta"],["senman", "sepuluh juta"],
-      ["oku", "seratus juta"],["chou", "satu triliun"]
+      ["oku", "seratus juta"],["chou", "satu triliun"],["jintai", "tubuh manusia"],["kata", "bahu"],["nodo", "tenggorokan"],["kao", "muka"],
+      ["hoho", "pipi"],["ha", "gigi"],["yubi", "jari"],["onaka", "perut"],["tsume", "kuku"],["hitai", "dahi"]
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
