--- a/kotoba.html
+++ b/kotoba.html
@@ -177,7 +177,17 @@
       ["きょうしつ", "ruang kelas"],
       ["しょくどう", "ruang makan"],
       ["じむしょ", "kantor"],
-      ["かいぎしつ", "ruang rapat"]
+      ["かいぎしつ", "ruang rapat"],
+      ["うけつけ", "bagian penerima tamu"],
+      ["ロビー", "ruang tunggu"],
+      ["へや", "kamar"],
+      ["トイレ", "toilet"],
+      ["かいだん", "tangga"],
+      ["エレベーター", "lift"],
+      ["エスカレーター", "eskalator"],
+      ["おくに", "negri"],
+      ["かいしゃ", "perusahaan"],
+      ["うち", "rumah"]
     ];
 
     let questions = [];
