--- a/kosakata.html
+++ b/kosakata.html
@@ -98,7 +98,9 @@
       ["yonman", "empat puluh ribu"],["goman", "lima puluh ribu"],["rokuman", "enam puluh ribu"],["nanaman", "tujuh puluh ribu"],
       ["hachiman", "delapan puluh ribu"],["sichiman", "tujuh puluh ribu"],["juuman", "seratus ribu"],["hyakuman", "sejuta"],["senman", "sepuluh juta"],
       ["oku", "seratus juta"],["chou", "satu triliun"],["jintai", "tubuh manusia"],["kata", "bahu"],["nodo", "tenggorokan"],["kao", "muka"],
-      ["hoho", "pipi"],["ha", "gigi"],["yubi", "jari"],["onaka", "perut"],["tsume", "kuku"],["hitai", "dahi"]
+      ["hoho", "pipi"],["ha", "gigi"],["yubi", "jari"],["onaka", "perut"],["tsume", "kuku"],["hitai", "dahi"],["ago", "dagu"],["hana", "hidung"],
+      ["kuchi", "mulut"],["kuchibiru", "bibir"],["kubi", "leher"],["tenohira", "telapak tangan"],["karada", "tubuh/badan"],["atama", "kepala"],
+      ["te", "tangan"],["ashi", "kaki"],["ude", "lengan"]
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
