--- a/kotoba.html
+++ b/kotoba.html
@@ -187,7 +187,16 @@
       ["エスカレーター", "eskalator"],
       ["おくに", "negri"],
       ["かいしゃ", "perusahaan"],
-      ["うち", "rumah"]
+      ["rうち", "rumah"],
+      ["でんわ", "telepon"],
+      ["くつ", "sepatu"],
+      ["ネクタイ", "dasi"],
+      ["ワイン", "wine(anggur)"],
+      ["たばこ", "rokok"],
+      ["うりば", "toko serba ada"],
+      ["ちか", "bawah tanah"],
+      ["ーかい", "lantai/tingkat"],
+      ["なんがい", "lantai berapa"]
     ];
 
     let questions = [];
