--- a/kosakata.html
+++ b/kosakata.html
@@ -100,7 +100,9 @@
       ["oku", "seratus juta"],["chou", "satu triliun"],["jintai", "tubuh manusia"],["kata", "bahu"],["nodo", "tenggorokan"],["kao", "muka"],
       ["hoho", "pipi"],["ha", "gigi"],["yubi", "jari"],["onaka", "perut"],["tsume", "kuku"],["hitai", "dahi"],["ago", "dagu"],["hana", "hidung"],
       ["kuchi", "mulut"],["kuchibiru", "bibir"],["kubi", "leher"],["tenohira", "telapak tangan"],["karada", "tubuh/badan"],["atama", "kepala"],
-      ["te", "tangan"],["ashi", "kaki"],["ude", "lengan"]
+      ["te", "tangan"],["ashi", "kaki"],["ude", "lengan"],["hiza", "lutut"],["kami", "rambut"],["senaka", "punggung"],["koshi", "pinggang"],
+      ["me", "mata"],["mimi", "telinga"],["kakato", "tumit"],["ashiyubi", "jari kaki"],["oyayubi", "jempol"],["hitosashiyubi", "jari telunjuk"],
+      ["nakayubi", "jari tengah"],["kusuruyubi", "jari manis"],["koyubi", "jari kelingking"],["agohige", "janggut"],["hige", "kumis"],["futomomo", "paha"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
