--- a/kotoba.html
+++ b/kotoba.html
@@ -187,7 +187,7 @@
       ["エスカレーター", "eskalator"],
       ["おくに", "negri"],
       ["かいしゃ", "perusahaan"],
-      ["rうち", "rumah"],
+      ["うち", "rumah"],
       ["でんわ", "telepon"],
       ["くつ", "sepatu"],
       ["ネクタイ", "dasi"],
@@ -196,7 +196,20 @@
       ["うりば", "toko serba ada"],
       ["ちか", "bawah tanah"],
       ["ーかい", "lantai/tingkat"],
-      ["なんがい", "lantai berapa"]
+      ["なんがい", "lantai berapa"],
+      ["ーえん", "-yen"],
+      ["いくら", "berapa(harga)"],
+      ["ひゃく", "seratus"],
+      ["せん", "seribu"],
+      ["まん", "sepuluh ribu"],
+      ["すみません", "maaf/permisi"],
+      ["ーでございます", "bentuk sopan です"],
+      ["(ーを) みせてください", "tolong perlihatkan (ー)"],
+      ["じゃ", "baiklah kalau begitu"],
+      ["(ーを) ください", "tolong berikan (ー)"],
+      ["しんおおさか", "nama stasiun di osaka"],
+      ["イタリア", "italia"],
+      ["スイス", "swiss"],
     ];
 
     let questions = [];
