--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -143,7 +143,17 @@
       ["いくら", "berapa banyak"],
       ["いけ", "kolam"],
       ["いしゃ", "dokter"],
-      ["いす", "kursi"]
+      ["いす", "kursi"],
+      ["いそがしい", "sibuk"],
+      ["いたい", "menyakiti"],
+      ["いち", "satu"],
+      ["いちにち", "satu hari/pertama sebulan"],
+      ["いちばん", "terbaik/pertama"],
+      ["いつ", "kapan"],
+      ["いつか", "lima hari"],
+      ["いっしょ", "bersama"],
+      ["いつつ", "lima"],
+      ["いつも", "selalu"],
     ];
 
     let questions = [];
