--- a/kanji.html
+++ b/kanji.html
@@ -140,7 +140,25 @@
       ["手", "tangan"],
       ["足", "kaki"],
       ["雨", "hujan"],
-      ["米", "beras"]
+      ["米", "beras"],
+      ["明", "terang"],
+      ["休", "beristirahat"],
+      ["体", "tubuh"],
+      ["好", "suka"],
+      ["男", "pria"],
+      ["林", "hutan"],
+      ["森", "hutan"],
+      ["竹", "bambu"],
+      ["貝", "kerang"],
+      ["花", "bunga"],
+      ["茶", "teh"],
+      ["肉", "daging"],
+      ["文", "kalimat"],
+      ["字", "huruf"],
+      ["物", "benda"],
+      ["牛", "sapi"],
+      ["鳥", "burung"],
+      ["魚", "ikan"]
     ];
 
     let questions = [], current = 0, score = 0;
