--- a/kotoba.html
+++ b/kotoba.html
@@ -149,7 +149,7 @@
       ["コンピューター", "komputer"],
       ["じどうしゃ", "mobil"],
       ["つくえ", "meja tulis"],
-      ["いつ", "kursi"],
+      ["いつ", "kapan"],
       ["ちこレート", "coklat"],
       ["コーヒー", "kopi"],
       ["えいご", "bahasa inggris"],
