--- a/kosakata.html
+++ b/kosakata.html
@@ -103,6 +103,10 @@
       ["te", "tangan"],["ashi", "kaki"],["ude", "lengan"],["hiza", "lutut"],["kami", "rambut"],["senaka", "punggung"],["koshi", "pinggang"],
       ["me", "mata"],["mimi", "telinga"],["kakato", "tumit"],["ashiyubi", "jari kaki"],["oyayubi", "jempol"],["hitosashiyubi", "jari telunjuk"],
       ["nakayubi", "jari tengah"],["kusuruyubi", "jari manis"],["koyubi", "jari kelingking"],["agohige", "janggut"],["hige", "kumis"],["futomomo", "paha"],
+      ["watashi", "saya"],["watakushi", "saya"],["shousa", "saya"],["boku", "saya"],["atashi", "saya"],["ore", "saya"],["watashitachi", "kami"],
+      ["bokutachi", "kami"],["bokura", "kami"],["atashitachi", "kami"],["oretachi", "kami"],["anata", "kamu"],["kimi", "kamu"],["omaera", "kamu"],
+      ["kare", "dia(laki)"],["karera", "mereka(laki)"],["kanojo", "dia(perempuan)"],["kanojora", "mereka(perempuan)"],["kore", "ini"],["korera", "ini(jamak)"],
+      ["sore", "itu"],["are", "itu"],["sorera", "itu(jamak)"],["arera", "itu(jamak)"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
