--- a/kotoba.html
+++ b/kotoba.html
@@ -210,6 +210,16 @@
       ["しんおおさか", "nama stasiun di osaka"],
       ["イタリア", "italia"],
       ["スイス", "swiss"],
+      ["おきます", "bangun"],
+      ["ねます", "tidur"],
+      ["はたらきます", "bekerja"],
+      ["やすみます", "beristirahat"],
+      ["べんきょうします", "belajar"],
+      ["おわります", "selesai"],
+      ["デパート", "toko serba ada"],
+      ["ぎんこう", "bank"],
+      ["ゆうびんきょく", "kantor pos"],
+      ["としょかん", "(gedung)perpustakaan"],
     ];
 
     let questions = [];
