--- a/kosakata.html
+++ b/kosakata.html
@@ -106,7 +106,10 @@
       ["watashi", "saya"],["watakushi", "saya"],["shousa", "saya"],["boku", "saya"],["atashi", "saya"],["ore", "saya"],["watashitachi", "kami"],
       ["bokutachi", "kami"],["bokura", "kami"],["atashitachi", "kami"],["oretachi", "kami"],["anata", "kamu"],["kimi", "kamu"],["omaera", "kamu"],
       ["kare", "dia(laki)"],["karera", "mereka(laki)"],["kanojo", "dia(perempuan)"],["kanojora", "mereka(perempuan)"],["kore", "ini"],["korera", "ini(jamak)"],
-      ["sore", "itu"],["are", "itu"],["sorera", "itu(jamak)"],["arera", "itu(jamak)"],
+      ["sore", "itu"],["are", "itu"],["sorera", "itu(jamak)"],["arera", "itu(jamak)"],["hifu", "kulit"],["ketsueki", "darah"],["mayu", "alis"],["mune", "dada"],
+      ["hiji", "siku"],["heso", "pusar"],["wakinoshita", "ketiak"],["ashikubi", "pergelangan kaki"],["tekubi", "pergelangan tangan"],["gankyuu", "bola mata"],
+      ["naizou", "tubuh bagian dalam"],["jinzou", "ginjal"],["kanzou", "hati"],["rokkotsu", "tulang rusuk"],["taiji", "janin"],["shinzou", "jantung"],
+      ["hizou", "limpa"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
