--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -154,6 +154,19 @@
       ["いっしょ", "bersama"],
       ["いつつ", "lima"],
       ["いつも", "selalu"],
+      ["いぬ", "anjing"],
+      ["いま", "sekarang"],
+      ["いみ", "arti"],
+      ["いもうと", "adik(perempuan)"],
+      ["いや", "tidak"],
+      ["いりぐち", "jalan masuk"],
+      ["いる", "(digunakan utk makhluk hidup)"],
+      ["いる", "membutuhkan"],
+      ["いれる", "memasukan"],
+      ["いろ", "warna"],
+      ["いろいろ", "berbagai macam"],
+      ["うえ", "diatas dari"],
+      ["うしろ", "dibelakang"],
     ];
 
     let questions = [];
