--- a/kosakata.html
+++ b/kosakata.html
@@ -109,7 +109,9 @@
       ["sore", "itu"],["are", "itu"],["sorera", "itu(jamak)"],["arera", "itu(jamak)"],["hifu", "kulit"],["ketsueki", "darah"],["mayu", "alis"],["mune", "dada"],
       ["hiji", "siku"],["heso", "pusar"],["wakinoshita", "ketiak"],["ashikubi", "pergelangan kaki"],["tekubi", "pergelangan tangan"],["gankyuu", "bola mata"],
       ["naizou", "tubuh bagian dalam"],["jinzou", "ginjal"],["kanzou", "hati"],["rokkotsu", "tulang rusuk"],["taiji", "janin"],["shinzou", "jantung"],
-      ["hizou", "limpa"],
+      ["hizou", "limpa"],["nou", "otak"],["kinniku", "otot"],["hai", "paru-paru"],["kekkan", "pembulu darah"],["doumyaku", "nadi"],["joumyaku", "urat"],
+      ["shikyuu", "rahim"],["moumaku", "rahim"],["seishi", "sperma"],["heso no o", "tali pusar"],["zugaikotsu", "tengkorak"],["hone", "tulang"],["choh", "usus"],
+      ["daichou", "usus besar"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
