--- a/kotoba.html
+++ b/kotoba.html
@@ -220,6 +220,21 @@
       ["ぎんこう", "bank"],
       ["ゆうびんきょく", "kantor pos"],
       ["としょかん", "(gedung)perpustakaan"],
+      ["びじゅつかん", "gedung kesenian"],
+      ["いま", "sekarang"],
+      ["ーじ", "pukulー"],
+      ["ーふん", "ーmenit"],
+      ["はん", "setengah (jam)"],
+      ["なんじ", "jam berapa"],
+      ["なんぷん", "berapa menit"],
+      ["ごぜん", "waktu sebelum jam 12 siang"],
+      ["ごご", "waktu sesudah jam 12 siang"],
+      ["あさ", "pagi"],
+      ["ひる", "siang,tengah hari"],
+      ["ばん", "malam"],
+      ["おととい", "kemarin dulu"],
+      ["きのう", "kemarin"],
+      ["きょう", "hari ini"],
     ];
 
     let questions = [];
