--- a/kosakata.html
+++ b/kosakata.html
@@ -111,7 +111,7 @@
       ["naizou", "tubuh bagian dalam"],["jinzou", "ginjal"],["kanzou", "hati"],["rokkotsu", "tulang rusuk"],["taiji", "janin"],["shinzou", "jantung"],
       ["hizou", "limpa"],["nou", "otak"],["kinniku", "otot"],["hai", "paru-paru"],["kekkan", "pembulu darah"],["doumyaku", "nadi"],["joumyaku", "urat"],
       ["shikyuu", "rahim"],["moumaku", "rahim"],["seishi", "sperma"],["heso no o", "tali pusar"],["zugaikotsu", "tengkorak"],["hone", "tulang"],["choh", "usus"],
-      ["daichou", "usus besar"],
+      ["daichou", "usus besar"],["boorupen", "pulpen"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
