--- a/kosakata.html
+++ b/kosakata.html
@@ -113,7 +113,7 @@
       ["shikyuu", "rahim"],["moumaku", "rahim"],["seishi", "sperma"],["heso no o", "tali pusar"],["zugaikotsu", "tengkorak"],["hone", "tulang"],["choh", "usus"],
       ["daichou", "usus besar"],["boorupen", "pulpen"],["hon", "buku"],["bundoki", "busur derajat"],["kyoukasho", "buku pelajaran"],["hyakkajiten", "ensiklopedia"],
       ["hasami", "gunting"],["dentaku keisanki", "kalkulator"],["chooku", "kapur"],["isu", "kursi"],["konpyu-ta", "komputer"],["jisho", "kamus"],["kami", "kertas"],
-      ["tsukue", "meja"],["kyoutaku", "guru"],["kokuban", "papan tulis"],["jougi", "penggaris"],["kokuban", "penghapus"],["keshi", "papan tulis"],
+      ["tsukue", "meja"],["kyoutaku", "guru"],["kokuban", "papan tulis hitam"],["jougi", "penggaris"],["kokuban keshi", "penghapus papan hitam"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
