--- a/kosakata.html
+++ b/kosakata.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kuis Kosakata Jepang</title>
+  <title>Kuis Kosakata</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -113,7 +113,9 @@
       ["shikyuu", "rahim"],["moumaku", "rahim"],["seishi", "sperma"],["heso no o", "tali pusar"],["zugaikotsu", "tengkorak"],["hone", "tulang"],["chou", "usus"],
       ["daichou", "usus besar"],["boorupen", "pulpen"],["hon", "buku"],["bundoki", "busur derajat"],["kyoukasho", "buku pelajaran"],["hyakkajiten", "ensiklopedia"],
       ["hasami", "gunting"],["dentaku keisanki", "kalkulator"],["chooku", "kapur"],["isu", "kursi"],["konpyu-ta", "komputer"],["jisho", "kamus"],["kami", "kertas"],
-      ["tsukue", "meja"],["kyoutaku", "guru"],["kokuban", "papan tulis hitam"],["jougi", "penggaris"],["kokuban keshi", "penghapus papan hitam"],
+      ["tsukue", "meja"],["kyoutaku", "guru"],["kokuban", "papan tulis hitam"],["jougi", "penggaris"],["kokuban keshi", "penghapus papan hitam"],["enpitsu", "pensil"],
+      ["sha-pen", "pensil mekanik"],["chizu", "peta"],["pen", "pulpen"],["hondana", "rak buku"],["enpitsu kezuri", "rautan pensil"],["seifuku", "seragam"],
+      ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
