--- a/kosakata.html
+++ b/kosakata.html
@@ -115,7 +115,9 @@
       ["hasami", "gunting"],["dentaku keisanki", "kalkulator"],["chooku", "kapur"],["isu", "kursi"],["konpyu-ta", "komputer"],["jisho", "kamus"],["kami", "kertas"],
       ["tsukue", "meja"],["kyoutaku", "guru"],["kokuban", "papan tulis hitam"],["jougi", "penggaris"],["kokuban keshi", "penghapus papan hitam"],["enpitsu", "pensil"],
       ["sha-pen", "pensil mekanik"],["chizu", "peta"],["pen", "pulpen"],["hondana", "rak buku"],["enpitsu kezuri", "rautan pensil"],["seifuku", "seragam"],
-      ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],
+      ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],["houchou", "pisau dapur"],["manaita", "talenan"],
+      ["jousuiki", "penyuling air"],["nabe", "panci"],["furaipan", "wajan"],["yakan", "ketel"],["otama", "sendok sayur"],["haisuikou", "saringan"],["bouru", "mangkuk"],
+      ["mikisaa", "blender"],["oroshigane", "parutan"],["kawa muki ki", "alat pengupas"],["sennuki", "pembuka botol"],["kankiri", "pembuka kaleng"],["koruku nuki", "kotrek"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
