--- a/kotoba.html
+++ b/kotoba.html
@@ -235,6 +235,22 @@
       ["おととい", "kemarin dulu"],
       ["きのう", "kemarin"],
       ["きょう", "hari ini"],
+      ["あしあ", "besok"],
+      ["あさって", "lusa"],
+      ["けさ", "tadi pagi"],
+      ["こんばん", "malam ini"],
+      ["やすみ", "istirahat,libur"],
+      ["ひるやすみ", "istirahat siang"],
+      ["まいあさ", "setiap pagi"],
+      ["まいばん", "setiap malam"],
+      ["まいにち", "setiap hari"],
+      ["げつようび", "senin"],
+      ["かようび", "selasa"],
+      ["すいようび", "rabu"],
+      ["もくようび", "kamis"],
+      ["きんようび", "jumat"],
+      ["どようび", "sabtu"],
+      ["にちようび", "minggu"],
     ];
 
     let questions = [];
