--- a/kanji.html
+++ b/kanji.html
@@ -158,7 +158,7 @@
       ["物", "benda"],
       ["牛", "sapi"],
       ["鳥", "burung"],
-      ["魚", "ikan"]
+      ["魚", "ikan"],
     ];
 
     let questions = [], current = 0, score = 0;
