--- a/kosakata.html
+++ b/kosakata.html
@@ -118,6 +118,7 @@
       ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],["houchou", "pisau dapur"],["manaita", "talenan"],
       ["jousuiki", "penyuling air"],["nabe", "panci"],["furaipan", "wajan"],["yakan", "ketel"],["otama", "sendok sayur"],["haisuikou", "saringan"],["bouru", "mangkuk"],
       ["mikisaa", "blender"],["oroshigane", "parutan"],["kawa muki ki", "alat pengupas"],["sennuki", "pembuka botol"],["kankiri", "pembuka kaleng"],["koruku nuki", "kotrek"],
+      ["kudamono", "buah"],["ichigo", "strawberry"],["mikan", "jeruk mandarin"],["orenji", "jeruk"],["remon", "lemon"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
