--- a/kosakata.html
+++ b/kosakata.html
@@ -118,7 +118,12 @@
       ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],["houchou", "pisau dapur"],["manaita", "talenan"],
       ["jousuiki", "penyuling air"],["nabe", "panci"],["furaipan", "wajan"],["yakan", "ketel"],["otama", "sendok sayur"],["haisuikou", "saringan"],["bouru", "mangkuk"],
       ["mikisaa", "blender"],["oroshigane", "parutan"],["kawa muki ki", "alat pengupas"],["sennuki", "pembuka botol"],["kankiri", "pembuka kaleng"],["koruku nuki", "kotrek"],
-      ["kudamono", "buah"],["ichigo", "strawberry"],["mikan", "jeruk mandarin"],["orenji", "jeruk"],["remon", "lemon"],
+      ["kudamono", "buah"],["ichigo", "strawberry"],["mikan", "jeruk mandarin"],["orenji", "jeruk"],["remon", "lemon"],["suika", "semangka"],["budou", "anggur"],
+      ["painappurru", "nanas"],["ringo", "apel"],["dorian", "durian"],["papaiya", "pepaya"],["momo", "buah persik"],["mangoo", "mangga"],["abokado", "alpukat"],
+      ["kiui", "kiwi"],["guaba", "jambu biji"],["hoshibudou", "kismis"],["zakuro", "delima"],["kokonottsu", "kelapa"],["kiichigo", "rasbery"],["budou", "anggur"],
+      ["nashi", "pir"],["yasai", "sayur"],["daikon", "lobak jepang"],["retasu", "selada"],["tomato", "tomat"],["kinomi", "kacang kacangan"],["budou", "anggur"],
+      ["jagaimo", "kentang"],["kyabetsu", "kubis"],["shouga", "jahe"],["nasu", "terong"],["buruuberii", "bluberry"],["burakkuberii", "blackberry"],["sakuranbou", "cherry"],
+      ["oribu", "buah jaitun"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
