--- a/kotoba.html
+++ b/kotoba.html
@@ -235,7 +235,7 @@
       ["おととい", "kemarin dulu"],
       ["きのう", "kemarin"],
       ["きょう", "hari ini"],
-      ["あしあ", "besok"],
+      ["あした", "besok"],
       ["あさって", "lusa"],
       ["けさ", "tadi pagi"],
       ["こんばん", "malam ini"],
