--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
       <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
-      <button onclick="location.href='matematika'">📑 Matematika Dasar</button>
+      <button onclick="location.href='matematika.html'">📑 Matematika Dasar</button>
     </div>
   </div>
 
