--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
       <button onclick="goTo('kuis')">📝 Kuis Hiragana & Katakana</button>
+      <button onclick="location.href='kuizz.html'">🗒️ Kuis Hiragana & Katakana</button>
       <button onclick="goTo('kanji')">🈶 Kuis Kunyomi Kanji</button>
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
