--- a/kuizz.html
+++ b/kuizz.html
@@ -71,7 +71,7 @@
   ["a","あ"],["i","い"],["u","う"],["e","え"],["o","お"],
   ["ka","か"],["ki","き"],["ku","く"],["ke","け"],["ko","こ"],
   ["sa","さ"],["shi","し"],["su","す"],["se","せ"],["so","そ"],
-  ["ta","た"],["chi","ち"],["tsu","つ"],["te","て"],["to","と"],
+  ["ta","た"],["chi","ち"],["tsu","つ"],["ta","て"],["to","と"],
   ["na","な"],["ni","に"],["nu","ぬ"],["ne","ね"],["no","の"],
   ["ha","は"],["hi","ひ"],["fu","ふ"],["he","へ"],["ho","ほ"],
   ["ma","ま"],["mi","み"],["mu","む"],["me","め"],["mo","も"],
