--- a/kuizz.html
+++ b/kuizz.html
@@ -68,21 +68,20 @@
 
   <script>
     const hiraganaDasar = [
-  ["a","あ"],["i","い"],["u","う"],["e","え"],["o","お"],
-  ["ka","か"],["ki","き"],["ku","く"],["ke","け"],["ko","こ"],
-  ["sa","さ"],["shi","し"],["su","す"],["se","せ"],["so","そ"],
-  ["ta","た"],["chi","ち"],["tsu","つ"],["ta","て"],["to","と"],
-  ["na","な"],["ni","に"],["nu","ぬ"],["ne","ね"],["no","の"],
-  ["ha","は"],["hi","ひ"],["fu","ふ"],["he","へ"],["ho","ほ"],
-  ["ma","ま"],["mi","み"],["mu","む"],["me","め"],["mo","も"],
-  ["ya","や"],["yu","ゆ"],["yo","よ"],
-  ["ra","ら"],["ri","り"],["ru","る"],["re","れ"],["ro","ろ"],
-  ["wa","わ"],["wo","を"],["n","ん"],
-  ["ga","が"],["gi","ぎ"],["gu","ぐ"],["ge","げ"],["go","ご"],
-  ["za","ざ"],["ji","じ"],["zu","ず"],["ze","ぜ"],["zo","ぞ"],
-  ["da","だ"],["dji","ぢ"],["dzu","づ"],["de","で"],["do","ど"],
-  ["ba","ば"],["bi","び"],["bu","ぶ"],["be","べ"],["bo","ぼ"],
-  ["pa","ぱ"],["pi","ぴ"],["pu","ぷ"],["pe","ぺ"],["po","ぽ"]
+      ["あ","a"],["い","i"],["う","u"],["え","e"],["お","o"],
+      ["か","ka"],["き","ki"],["く","ku"],["け","ke"],["こ","ko"],
+      ["さ","sa"],["し","shi"],["す","su"],["せ","se"],["そ","so"],
+      ["た","ta"],["ち","chi"],["つ","tsu"],["て","te"],["と","to"],
+      ["な","na"],["に","ni"],["ぬ","nu"],["ね","ne"],["の","no"],
+      ["は","ha"],["ひ","hi"],["ふ","fu"],["へ","he"],["ほ","ho"],
+      ["ま","ma"],["み","mi"],["む","mu"],["め","me"],["も","mo"],
+      ["や","ya"],["ゆ","yu"],["よ","yo"],
+      ["ら","ra"],["り","ri"],["る","ru"],["れ","re"],["ろ","ro"],
+      ["わ","wa"],["を","wo"],["ん","n"],["が", "ga"],["ぎ", "gi"],
+      ["ぐ", "gu"],["げ", "ge"],["ご", "go"],["ざ", "za"],["じ", "ji"],["ず", "zu"],
+      ["ぜ", "ze"],["ぞ", "zo"],["だ", "da"],["ぢ", "dji"],["づ", "dzu"],["で", "de"],
+      ["ど", "do"],["ば", "ba"],["び", "bi"],["ぶ", "bu"],["べ", "be"],["ぼ", "bo"],
+      ["ぱ", "pa"],["ぴ", "pi"],["ぷ", "pu"],["ぺ", "pe"],["ぽ", "po"]
     ];
     const katakanaDasar = hiraganaDasar.map(([kana, romaji]) => [
       String.fromCharCode(kana.charCodeAt(0) + 0x60), romaji
