--- a/kuizz.html
+++ b/kuizz.html
@@ -82,7 +82,7 @@
       ["za","ざ"],["ji","じ"],["zu","ず"],["ze","ぜ"],["zo","ぞ"],
       ["da","だ"],["dji","ぢ"],["dzu","づ"],["de","で"],["do","ど"],
       ["ba","ば"],["bi","び"],["bu","ぶ"],["be","べ"],["bo","ぼ"],
-      ["pa","ぱ"],["pi","ぴ"],["pu","ぷ"],["pe","ぺ"],["po","ぽ"]
+      ["pa","ぱ"],["pi","ぴ"],["pu","ぷ"],["pe","ぺ"],["po","ぽ"],
     ];
 
     // Katakana dasar = romaji + katakana
@@ -102,7 +102,7 @@
       ["gya","ぎゃ"],["gyu","ぎゅ"],["gyo","ぎょ"],
       ["ja","じゃ"],["ju","じゅ"],["jo","じょ"],
       ["bya","びゃ"],["byu","びゅ"],["byo","びょ"],
-      ["pya","ぴゃ"],["pyu","ぴゅ"],["pyo","ぴょ"]
+      ["pya","ぴゃ"],["pyu","ぴゅ"],["pyo","ぴょ"],
     ];
 
     const youonKatakana = youonHiragana.map(([romaji, hira]) => [
